[project]
name = "gsi-q3-assignment-3-inventory-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ShahFaisalIslam", email = "faisal.islam.ceme@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.8",
]

[project.scripts]
gsi-q3-assignment-3-inventory-agent = "gsi_q3_assignment_3_inventory_agent:main"
start = "start:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
